--- a/stylehalamanbaru.css
+++ b/stylehalamanbaru.css
@@ -71,8 +71,7 @@ h1 {
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   border-radius: 5px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   width: 40%;
   transition: 0.3s;
 }
@@ -93,4 +92,23 @@ h1 {
   width: 100%;
   z-index: 1;
 }
-  
+
+@media only screen and (max-width: 540px) {
+  .cta-button {
+    display: flex;
+    font-size: 0.85em;
+    padding: 10px 10px;
+    background-color: #ffc91b;
+    color: black;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 5px;
+    text-align: center;
+    width: 60%;
+    transition: 0.3s;
+  }
+
+  header li {
+    display: none;
+  }
+}
